--- a/Plugins/NetworkReplicationSubsystem/NetworkReplicationSubsystem.uplugin
+++ b/Plugins/NetworkReplicationSubsystem/NetworkReplicationSubsystem.uplugin
@@ -9,7 +9,7 @@
   "CreatedByURL": "https://millsy.dev",
   "DocsURL": "https://docs.millsy.dev/network-replication",
   "MarketplaceURL": "",
-  "FabURL": "com.epicgames.launcher://ue/Fab/product/e7b93fe4-c66b-4c43-b0dd-abfa997cd93d",
+  "FabURL": "https://www.fab.com/portal/listings/d159df69-5779-4809-a708-898a67fe49a7",
   "SupportURL": "https://discord.gg/uyJ636Y4u8",
   "CanContainContent": false,
   "IsBetaVersion": false,
