--- a/Plugins/NetworkReplicationSubsystem/NetworkReplicationSubsystem.uplugin
+++ b/Plugins/NetworkReplicationSubsystem/NetworkReplicationSubsystem.uplugin
@@ -7,7 +7,7 @@
   "Category": "Networking",
   "CreatedBy": "Millsy.dev",
   "CreatedByURL": "https://millsy.dev",
-  "DocsURL": "https://docs.millsy.dev/network-replication",
+  "DocsURL": "https://github.com/millsydotdev/NetworkReplication-UE5/tree/main/Plugins/NetworkReplicationSubsystem/Docs",
   "MarketplaceURL": "",
   "FabURL": "https://www.fab.com/portal/listings/d159df69-5779-4809-a708-898a67fe49a7",
   "SupportURL": "https://discord.gg/uyJ636Y4u8",
