--- a/Plugins/NetworkReplicationSubsystem/NetworkReplicationSubsystem.uplugin
+++ b/Plugins/NetworkReplicationSubsystem/NetworkReplicationSubsystem.uplugin
@@ -8,7 +8,7 @@
   "CreatedBy": "Millsy.dev",
   "CreatedByURL": "https://millsy.dev",
   "DocsURL": "https://github.com/millsydotdev/NetworkReplication-UE5/tree/main/Plugins/NetworkReplicationSubsystem/Docs",
-  "MarketplaceURL": "",
+  "MarketplaceURL": "https://www.fab.com/portal/listings/d159df69-5779-4809-a708-898a67fe49a7",
   "FabURL": "https://www.fab.com/portal/listings/d159df69-5779-4809-a708-898a67fe49a7",
   "SupportURL": "https://discord.gg/uyJ636Y4u8",
   "CanContainContent": false,
