--- a/Plugins/NetworkReplicationSubsystem/Config/FilterPlugin.ini
+++ b/Plugins/NetworkReplicationSubsystem/Config/FilterPlugin.ini
@@ -1,8 +1,6 @@
 [FilterPlugin]
-; Custom folders that should be included in the plugin distribution
-+CustomFolders=/Docs
-+CustomFolders=/Content
-+CustomFolders=/Config
-+CustomFolders=/Resources
-+CustomFolders=/LICENSE
-+CustomFolders=/CONTRIBUTING.md
+/Docs/...
+/Config/...
+/Resources/...
+/LICENSE
+/CONTRIBUTING.md
