Fix Compile Error

--- a/Plugins/NetworkReplicationSubsystem/NetworkReplicationSubsystem.uplugin
+++ b/Plugins/NetworkReplicationSubsystem/NetworkReplicationSubsystem.uplugin
@@ -8,8 +8,8 @@
   "CreatedBy": "Millsy.dev",
   "CreatedByURL": "https://millsy.dev",
   "DocsURL": "https://github.com/millsydotdev/NetworkReplication-UE5/tree/main/Plugins/NetworkReplicationSubsystem/Docs",
-  "MarketplaceURL": "https://www.fab.com/portal/listings/d159df69-5779-4809-a708-898a67fe49a7",
-  "FabURL": "https://www.fab.com/portal/listings/d159df69-5779-4809-a708-898a67fe49a7",
+  "MarketplaceURL": "com.epicgames.launcher://ue/Fab/product/e7b93fe4-c66b-4c43-b0dd-abfa997cd93d",
+  "FabURL": "https://www.fab.com/portal/listings/e7b93fe4-c66b-4c43-b0dd-abfa997cd93d",
   "SupportURL": "https://discord.gg/uyJ636Y4u8",
   "CanContainContent": false,
   "IsBetaVersion": false,
