--- a/NetworkReplication.uproject
+++ b/NetworkReplication.uproject
@@ -18,7 +18,7 @@
 		{
 			"Name": "NetworkReplicationSubsystem",
 			"Enabled": true,
-			"MarketplaceURL": "",
+			"MarketplaceURL": "com.epicgames.launcher://ue/Fab/product/86ff58cf-6f61-4a31-8514-52e4cc3e43eb",
 			"SupportedTargetPlatforms": [
 				"Win64",
 				"Mac",
